Style: avoid avtar shrink and update truncate style

--- a/frontend/src/components/ChatCard/index.module.css
+++ b/frontend/src/components/ChatCard/index.module.css
@@ -3,7 +3,7 @@
 }
 
 .avatar {
-  @apply bg-primary-text-2;
+  @apply flex-shrink-0 bg-primary-text-2;
 }
 
 .active {
@@ -11,7 +11,7 @@
 }
 
 .chatInfo {
-  @apply flex-1;
+  @apply flex-1 truncate;
 }
 
 .chatInfoField {
@@ -23,13 +23,12 @@
 }
 
 .updates {
-  @apply text-xs font-bold text-green-500 col-span-1 lg:col-span-3 justify-self-end;
+  @apply text-xs font-semibold text-primary-text-2 col-span-1 lg:col-span-3 justify-self-end;
 }
 
 .latestMessage {
   @apply text-xs text-primary-text-2 truncate font-light col-span-3 lg:col-span-9;
 }
-
 
 .typingStatus {
   @apply text-xs text-accent-1 truncate col-span-3 lg:col-span-9;
